tdf#125126 Use individual methods for polar handles in OOXML shapes

Polar handles of preset custom shapes from OOXML import have shown
the error, that handles are jumping or not movable or direction of
handle movement was opposite to change of shape outline. Reason
was that for backwards calculation a single method was used. But
the meaning of the adjustment value is special to the handle and
thus the backwards calculation too.

Change-Id: Ia57b07ddc23efeb32ba569ce84d47b535e801750